--- a/src/PingPong/Views/ShellView.xaml
+++ b/src/PingPong/Views/ShellView.xaml
@@ -1,32 +1,50 @@
 ﻿<UserControl x:Class="PingPong.Views.ShellView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:cal="http://www.caliburnproject.org"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:cal="http://www.caliburnproject.org"
+             xmlns:toolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit"
              d:DesignHeight="120"
              d:DesignWidth="344"
              mc:Ignorable="d">
-    <Grid>
+    <Grid Background="#FF111111">
         <Grid.RowDefinitions>
             <RowDefinition Height="28" />
             <RowDefinition Height="*" />
             <RowDefinition Height="3" />
         </Grid.RowDefinitions>
-        <Border Background="#FF111111" />
-        <Border Grid.Row="2" Background="#FF111111" />
         <TextBlock HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    FontFamily="{StaticResource DefaultFontFamily}"
                    FontSize="18.667"
                    Foreground="{StaticResource UserInfoCountsBrush}"
                    Text="ping.pong" />
-	    <Border Background="Transparent" cal:Message.Attach="[Event MouseLeftButtonDown] = [DragMove]" />
+        <Border Background="Transparent" cal:Message.Attach="[Event MouseLeftButtonDown] = [DragMove]" />
         <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button x:Name="Minimize" Width="20" Content="-" Foreground="{StaticResource UserInfoCountsBrush}" Style="{StaticResource SimpleToggleButtonStyle}" />
-            <Button x:Name="Maximize" Width="20" Content="+" Foreground="{StaticResource UserInfoCountsBrush}" Style="{StaticResource SimpleToggleButtonStyle}" />
-            <Button x:Name="Close" Width="20" Content="x" Foreground="{StaticResource UserInfoCountsBrush}" Style="{StaticResource SimpleToggleButtonStyle}" />
+            <Button x:Name="Timelines" Content="t" Foreground="{StaticResource UserInfoCountsBrush}" Style="{StaticResource SimpleToggleButtonStyle}" />
+            <Button x:Name="Config" Content="c" Foreground="{StaticResource UserInfoCountsBrush}" Style="{StaticResource SimpleToggleButtonStyle}" />
+            <Button x:Name="Minimize"
+                    Width="20"
+                    Content="-"
+                    Foreground="{StaticResource UserInfoCountsBrush}"
+                    Style="{StaticResource SimpleToggleButtonStyle}" />
+            <Button x:Name="Maximize"
+                    Width="20"
+                    Content="+"
+                    Foreground="{StaticResource UserInfoCountsBrush}"
+                    Style="{StaticResource SimpleToggleButtonStyle}" />
+            <Button x:Name="Close"
+                    Width="20"
+                    Content="x"
+                    Foreground="{StaticResource UserInfoCountsBrush}"
+                    Style="{StaticResource SimpleToggleButtonStyle}" />
         </StackPanel>
-        <ContentControl x:Name="ActiveItem" Grid.Row="1" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" />
+        <toolkit:TransitioningContentControl x:Name="ActiveItem"
+                                             Grid.Row="1"
+                                             VerticalAlignment="Stretch"
+                                             VerticalContentAlignment="Stretch"
+                                             HorizontalContentAlignment="Stretch"
+                                             Transition="DownTransition"/>
     </Grid>
 </UserControl>
