--- a/src/PingPong/Themes/DarkTweetsPanel.xaml
+++ b/src/PingPong/Themes/DarkTweetsPanel.xaml
@@ -541,19 +541,10 @@
         </Setter>
     </Style>
 
-    <Style x:Key="DarkTweetsPanel" TargetType="ItemsControl">
-        <Setter Property="Background" Value="#FF181818" />
-        <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Recycling" />
-        <Setter Property="ItemsPanel">
-            <Setter.Value>
-                <ItemsPanelTemplate>
-                    <VirtualizingStackPanel />
-                </ItemsPanelTemplate>
-            </Setter.Value>
-        </Setter>
+    <Style x:Key="DarkTweetsContentWrapperStyle" TargetType="ContentControl">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate>
+                <ControlTemplate TargetType="ContentControl">
                     <Grid Background="{TemplateBinding Background}" cal:Bind.Model="{Binding}">
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="VisualStateGroup">
@@ -582,9 +573,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <ScrollViewer Margin="0" Style="{StaticResource ScrollViewerStyle}" VerticalScrollBarVisibility="Visible">
-                            <ItemsPresenter />
-                        </ScrollViewer>
+                        <ContentControl Content="{TemplateBinding Content}" />
                         <Border Grid.RowSpan="2" Height="10" VerticalAlignment="Bottom">
                             <Border.Background>
                                 <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
@@ -661,56 +650,31 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style x:Key="DarkTweetsPanel" TargetType="ItemsControl">
+        <Setter Property="Background" Value="#FF181818" />
+        <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Recycling" />
+        <Setter Property="ItemsPanel">
+            <Setter.Value>
+                <ItemsPanelTemplate>
+                    <VirtualizingStackPanel />
+                </ItemsPanelTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <ContentControl Style="{StaticResource DarkTweetsContentWrapperStyle}">
+                        <ScrollViewer Margin="0" Style="{StaticResource ScrollViewerStyle}" VerticalScrollBarVisibility="Visible">
+                            <ItemsPresenter />
+                        </ScrollViewer>
+                    </ContentControl>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
         <Setter Property="ItemTemplate" Value="{StaticResource DarkTweetDataTemplate}" />
     </Style>
-    <ControlTemplate x:Key="ValidationToolTipTemplate">
-        <Grid x:Name="Root" Margin="5,0" Opacity="0" RenderTransformOrigin="0,0">
-            <Grid.RenderTransform>
-                <TranslateTransform x:Name="xform" X="-25" />
-            </Grid.RenderTransform>
-            <VisualStateManager.VisualStateGroups>
-                <VisualStateGroup x:Name="OpenStates">
-                    <VisualStateGroup.Transitions>
-                        <VisualTransition GeneratedDuration="0" />
-                        <VisualTransition GeneratedDuration="0:0:0.2" To="Open">
-                            <Storyboard>
-                                <DoubleAnimation Duration="0:0:0.2" Storyboard.TargetName="xform" Storyboard.TargetProperty="X" To="0">
-                                    <DoubleAnimation.EasingFunction>
-                                        <BackEase Amplitude=".3" EasingMode="EaseOut" />
-                                    </DoubleAnimation.EasingFunction>
-                                </DoubleAnimation>
-                                <DoubleAnimation Duration="0:0:0.2" Storyboard.TargetName="Root" Storyboard.TargetProperty="Opacity" To="1" />
-                            </Storyboard>
-                        </VisualTransition>
-                    </VisualStateGroup.Transitions>
-                    <VisualState x:Name="Closed">
-                        <Storyboard>
-                            <DoubleAnimation Duration="0" Storyboard.TargetName="Root" Storyboard.TargetProperty="Opacity" To="0" />
-                        </Storyboard>
-                    </VisualState>
-                    <VisualState x:Name="Open">
-                        <Storyboard>
-                            <DoubleAnimation Duration="0" Storyboard.TargetName="xform" Storyboard.TargetProperty="X" To="0" />
-                            <DoubleAnimation Duration="0" Storyboard.TargetName="Root" Storyboard.TargetProperty="Opacity" To="1" />
-                        </Storyboard>
-                    </VisualState>
-                </VisualStateGroup>
-            </VisualStateManager.VisualStateGroups>
-            <Border Margin="4,4,-4,-4" Background="#052A2E31" CornerRadius="5" />
-            <Border Margin="3,3,-3,-3" Background="#152A2E31" CornerRadius="4" />
-            <Border Margin="2,2,-2,-2" Background="#252A2E31" CornerRadius="3" />
-            <Border Margin="1,1,-1,-1" Background="#352A2E31" CornerRadius="2" />
-            <Border Background="#FFDC000C" CornerRadius="2" />
-            <Border CornerRadius="2">
-                <TextBlock MaxWidth="250"
-                           Margin="8,4,8,4"
-                           Foreground="White"
-                           Text="{Binding (Validation.Errors)[0].ErrorContent}"
-                           TextWrapping="Wrap"
-                           UseLayoutRounding="false" />
-            </Border>
-        </Grid>
-    </ControlTemplate>
     <Style x:Key="DarkComboBoxStyle" TargetType="ComboBox">
         <Setter Property="Padding" Value="6,2,25,2" />
         <Setter Property="Background" Value="#FF1F3B53" />
@@ -779,9 +743,9 @@
                             <Border x:Name="PopupBorder"
                                     Height="Auto"
                                     HorizontalAlignment="Stretch"
+                                    Background="{TemplateBinding Background}"
                                     BorderBrush="{TemplateBinding BorderBrush}"
                                     BorderThickness="{TemplateBinding BorderThickness}"
-									Background="{TemplateBinding Background}"
                                     CornerRadius="2">
                                 <ScrollViewer x:Name="ScrollViewer" BorderThickness="0" Padding="1">
                                     <ItemsPresenter />
