--- a/src/PingPong/Themes/Generic.xaml
+++ b/src/PingPong/Themes/Generic.xaml
@@ -1,4 +1,9 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ctrl="clr-namespace:PingPong.Controls">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:ctrl="clr-namespace:PingPong.Controls"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    mc:Ignorable="d">
 
     <Style TargetType="ctrl:TweetTextBlock">
         <Setter Property="Template">
@@ -20,7 +25,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ctrl:NotificationControl">
-                    <ContentControl VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Content="{Binding}" ContentTemplate="{StaticResource SimpleTweetDataTemplate}" />
+                    <Border Background="#FF111111" d:DesignHeight="125" d:DesignWidth="318">
+                        <ContentControl HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Content="{Binding}" ContentTemplate="{StaticResource MetroTweetDataTemplate}" />
+                    </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
