--- a/src/PingPong/Views/ConfigurationView.xaml
+++ b/src/PingPong/Views/ConfigurationView.xaml
@@ -1,12 +1,88 @@
 ﻿<UserControl x:Class="PingPong.Views.ConfigurationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:cal="http://www.caliburnproject.org"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             MinWidth="300"
+             MinHeight="300"
              mc:Ignorable="d">
-
-    <Grid x:Name="LayoutRoot" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FF111111">
-       
-    </Grid>
+    <Border Background="#FF111111"
+            BorderBrush="Gray"
+            BorderThickness="1,0,1,1"
+            CornerRadius="0,0,10,10"
+            Padding="5,0,5,5">
+        <Grid x:Name="LayoutRoot" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <TextBlock FontFamily="{StaticResource DefaultFontFamily}" FontSize="18.667" Foreground="#FFFF5858" Text="Theme" />
+                <ListBox x:Name="Themes"
+                         Grid.Row="1"
+                         Background="#FF111111"
+                         BorderThickness="0"
+                         FontFamily="{StaticResource DefaultFontFamily}"
+                         FontSize="13.333"
+                         Foreground="#FFC0A071">
+                    <ListBox.Resources>
+                        <Style x:Key="ListBoxItemStyle1" TargetType="ListBoxItem">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ListBoxItem">
+                                        <Grid Background="{TemplateBinding Background}">
+                                            <VisualStateManager.VisualStateGroups>
+                                                <VisualStateGroup x:Name="CommonStates">
+                                                    <VisualState x:Name="Normal" />
+                                                    <VisualState x:Name="MouseOver">
+                                                        <Storyboard>
+                                                            <DoubleAnimation Duration="0" Storyboard.TargetName="fillColor" Storyboard.TargetProperty="Opacity" To="0.1" />
+                                                        </Storyboard>
+                                                    </VisualState>
+                                                    <VisualState x:Name="Disabled" />
+                                                </VisualStateGroup>
+                                                <VisualStateGroup x:Name="SelectionStates">
+                                                    <VisualState x:Name="Unselected" />
+                                                    <VisualState x:Name="Selected">
+                                                        <Storyboard>
+                                                            <DoubleAnimation Duration="0" Storyboard.TargetName="fillColor2" Storyboard.TargetProperty="Opacity" To="0.2" />
+                                                        </Storyboard>
+                                                    </VisualState>
+                                                </VisualStateGroup>
+                                            </VisualStateManager.VisualStateGroups>
+                                            <Rectangle x:Name="fillColor"
+                                                       Fill="#FFBADDE9"
+                                                       IsHitTestVisible="False"
+                                                       Opacity="0"
+                                                       RadiusX="1"
+                                                       RadiusY="1" />
+                                            <Rectangle x:Name="fillColor2"
+                                                       Fill="#FFBADDE9"
+                                                       IsHitTestVisible="False"
+                                                       Opacity="0"
+                                                       RadiusX="1"
+                                                       RadiusY="1" />
+                                            <ContentPresenter x:Name="contentPresenter"
+                                                              Margin="{TemplateBinding Padding}"
+                                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                              Content="{TemplateBinding Content}"
+                                                              ContentTemplate="{TemplateBinding ContentTemplate}" />
+                                        </Grid>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ListBox.Resources>
+                    <ListBox.ItemContainerStyle>
+                        <StaticResource ResourceKey="ListBoxItemStyle1" />
+                    </ListBox.ItemContainerStyle>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <RadioButton Content="{Binding Key}" Foreground="#FFC25A5A" Style="{StaticResource SimpleToggleButtonStyle}" />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
+        </Grid>
+    </Border>
 </UserControl>
