--- a/src/PingPong/Views/TweetsPanelView.xaml
+++ b/src/PingPong/Views/TweetsPanelView.xaml
@@ -1,13 +1,14 @@
 ﻿<UserControl x:Class="PingPong.Views.TweetsPanelView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:b="clr-namespace:PingPong.Behaviors"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:b="clr-namespace:PingPong.Behaviors" d:DesignHeight="392"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             d:DesignHeight="392"
              d:DesignWidth="592"
              mc:Ignorable="d">
-    <ItemsControl x:Name="Tweets" Style="{StaticResource DarkTweetsPanel}">
+    <ItemsControl x:Name="Tweets" Style="{Binding AppInfo.StatusStyle}">
         <i:Interaction.Behaviors>
             <b:AutoSizeBehavior />
             <b:RefreshDateBehavior />
