--- a/src/PingPong/Views/ConfigurationView.xaml
+++ b/src/PingPong/Views/ConfigurationView.xaml
@@ -11,7 +11,7 @@
             BorderThickness="1,0,1,1"
             CornerRadius="0,0,10,10"
             Padding="5,0,5,5">
-        <Grid x:Name="LayoutRoot" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <StackPanel x:Name="LayoutRoot" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -20,6 +20,7 @@
                 <TextBlock FontFamily="{StaticResource DefaultFontFamily}" FontSize="18.667" Foreground="#FFFF5858" Text="Theme" />
                 <ListBox x:Name="Themes"
                          Grid.Row="1"
+                         Margin="4"
                          Background="#FF111111"
                          BorderThickness="0"
                          FontFamily="{StaticResource DefaultFontFamily}"
@@ -83,6 +84,20 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </Grid>
-        </Grid>
+
+            <Grid Margin="0,10,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <TextBlock FontFamily="{StaticResource DefaultFontFamily}" FontSize="18.667" Foreground="#FFFF5858" Text="Notifications" />
+                <CheckBox Grid.Row="1"
+                          Margin="4"
+                          Content="Enabled"
+                          Foreground="#FFC25A5A"
+                          IsChecked="{Binding AppInfo.IsNotificationsEnabled}"
+                          Style="{StaticResource FollowsYouCheckBoxStyle}" />
+            </Grid>
+        </StackPanel>
     </Border>
 </UserControl>
